Forgot to open <body> tag!
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/qfa@282 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,8 @@
 <link rel="stylesheet" type="text/css" href="CLstyle.css">
 </head> 
  
+<body>
+ 
 <header>
 <a href="http://www.flickr.com/photos/conchur/8187964744/" title="FourCulturesCropped by Conor Lawless, on Flickr">
 <img src="http://farm9.staticflickr.com/8489/8187964744_583f1264b2_m.jpg" width="180" alt="FourCulturesCropped" style="display: inline; float:left; margin-right: 5px; margin-bottom: 30px;">
