instructions for demo?
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/qfa@329 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/www/index.html
+++ b/www/index.html
@@ -7,17 +7,15 @@
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" type="text/css" href="CLstyle.css">
 </head> 
- 
+
 <body>
  
 <header>
 <a href="http://www.flickr.com/photos/conchur/8187964744/" title="FourCulturesCropped by Conor Lawless, on Flickr">
-<img src="http://farm9.staticflickr.com/8489/8187964744_583f1264b2_m.jpg" width="180" alt="FourCulturesCropped" style="display: inline; float:left; margin-right: 5px; margin-bottom: 30px;">
-</a><h1>qfa: tools for Quantitative Fitness Analysis</h1> 
+<img src="http://farm9.staticflickr.com/8489/8187964744_583f1264b2_m.jpg" width="180" alt="FourCulturesCropped" style="display: inline; float:left; margin-right: 5px; margin-bottom: 30px;"></a>
+<h1>qfa: tools for Quantitative Fitness Analysis</h1> 
 <hr></hr>
 </header>
-
-
 
 <nav id="nav">
 <h4>Contents</h4>
@@ -100,6 +98,8 @@ Finally, some code demonstrating analysis of a small subset of the <a href="http
 <a href="TwoGrowthCurves.png"><img src="TwoGrowthCurves.png" width="550" title="Timeseries photographs and growth curves for two example spotted cultures."></a>
 
 <p>If arrayed cultures are grown at selected temperatures we can infer the temperature sensitivity of mutants by QFA. <a href="http://www.plosgenetics.org/doi/pgen.1001362">Addinall et al., 2011</a> demonstrated the use of QFA to identify gene deletions resulting in increased temperature sensitivity.  These results were verified by comparison with <a href="http://www.yeastgenome.org/cgi-bin/phenotype/phenotype.fpl?rm=specific_tables&phenotype=heat%20sensitivity:%20increased">manually curated observations</a> listed in the <a href="http://www.yeastgenome.org/"><i>Saccharomyces</i> Genome Database (SGD)</a>.  If cultures are subject to treatments (e.g. nutrition, or drug treatments) QFA can generate ranked lists of cultures which grow surprisingly well or badly given the particular treatment.</p>
+
+<p>The supplementary data <a href="">website</a> for <a href="http://www.plosgenetics.org/doi/pgen.1001362">Addinall et al., 2011</a> contains large, genome-wide datasets suitable for analysis with this package.</p>  
 
 <a href="FitnessPlot.png"><img src="FitnessPlot.png" width="550" title="A genome-wide screen for genes interacting with CDC13"></a>
 
