Updates to visTool description page...
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/qfa@353 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/www/index.html
+++ b/www/index.html
@@ -143,6 +143,8 @@ Finally, some code demonstrating analysis of a small subset of the <a href="http
 
 <a name="auxiliary"><h3>Auxiliary functions</h3></a>
 <p>Together with the functions for carrying out the raw analysis above, we provide several functions for visualising the data, the fit of the logistic model to the data and the visualisation of evidence for epistatic interaction.  These visualisation tools are important for understanding unexpected fitness patterns, tracking bugs and increasing user confidence in the validity of the sophisticated QFA workflows.</p>
+
+<p>One such function, the qfaR visualisation tool, generates interactive scatterplots for browsing genome-wide fitness comparisons.  Extensive documentation for this tool can be found <a href="visTool">here</a>.</p>
 </article>
 
 </body> 
