git-svn-id: svn://svn.r-forge.r-project.org/svnroot/qfa@355 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/www/index.html
+++ b/www/index.html
@@ -63,7 +63,7 @@
 <a name="intro"><h2>Introduction</h2></a>
 <p>This page describes how to install and use an <a href="http://cran.r-project.org/">R</a> package for carrying out quantitative fitness analysis (<a href="#qfa">QFA</a>) of the growth of microbial cultures arrayed on a solid agar surface.  A more detailed description of QFA and the motivation for carrying out these experiments and subsequent analysis can be found <a href="#qfa">below</a>, but first we include some installation instructions.</p>
 
-<p>Simple installation instructions for users only interested in using the data visualisation tools in the package can be found <a href="visTool">here</a>.</p>
+<p>Simple installation instructions for users interested in using the data visualisation tools in the package can be found <a href="visTool">here</a>.</p>
 
 <hr></hr>
 
