Added sentences to visTool website describing how to update existing installations.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/qfa@364 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/www/visTool/index.html
+++ b/www/visTool/index.html
@@ -74,7 +74,7 @@ Note that, depending on the version of your operating system, you might be promp
 <li>Hit the Install button and then navigate to where you've saved the file, press OK to install it</li>
 </ol> 
 
-<p>Installation should be complete.  You do not have to go through these steps again to use the tool.</p>
+<p>Installation should be complete.  You do not have to go through these steps again to use the tool.  To update an existing installation to the latest version, simply repeat step 2 (or repeat the "Older versions of R" steps if R-forge installation does not work for you).</p>
 
 <hr></hr>
 
@@ -92,7 +92,7 @@ install.packages("qfa", repos="http://R-Forge.R-project.org")
 </code>
 </ol>
 
-<p>Installation should be complete.  You do not have to go through these steps again to use the tool.</p>
+<p>Installation should be complete.  You do not have to go through these steps again to use the tool.  To update an existing installation to the latest version, simply repeat step 2.</p>
 
 <hr></hr>
 <a name="instruct"><h2>Starting the tool (OSX or Windows)</h2></a>
