Instructions for generating .ps, .pdf and .png files.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/qfa@371 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/www/visTool/index.html
+++ b/www/visTool/index.html
@@ -141,7 +141,7 @@ visToolDemo(buildGO)
 <li><b>t:</b> Toggle colours (red/green) indicating positive and negative interaction.</li>
 <li><b>l:</b> Toggle plot style between fitness plot and ratio plot.</li>
 <li><b>r:</b> Enter zoom mode.  Click on top left and bottom right of area to inspect.</li>
-<li><b>p:</b> Save current plot as vector graphic to QFAVisualisation.pdf</li>
+<li><b>p:</b> Save current plot as vector graphic to QFAVisualisation.ps.  Other filetypes can also be generated - 'n': .png and 'm': .pdf</li>
 <li><b>q:</b> Quit tool and print gene names currently selected to console window.</li>
 </ul>
 </article>
