--- a/www/visTool/index.html
+++ b/www/visTool/index.html
@@ -52,7 +52,7 @@
 
 <a name="osx"><h2>Installation for OSX</h2></a>
 
-<p>You will require administrator rights on your machine to install <a href="http://cran.r-project.org/bin/macosx/">R</a> and the qfa package.
+<p>You will require administrator rights on your machine to install <a href="http://cran.r-project.org/bin/macosx/">R</a>.
 
 <ol><li>Make sure you have the latest version of R installed on your computer.  If not, <a href="http://cran.r-project.org/bin/macosx/">download</a> the latest installation file (.pkg file) to your hard drive and install.</li>
 	<li>Install the qfa package containing the visualisation tool and the <a href="http://www.plosgenetics.org/doi/pgen.1001362">Addinall et al., 2011</a> QFA datasets:<ol type="a">
@@ -140,8 +140,10 @@ visToolDemo(buildGO)
 <li><b>d:</b> Remove highlighting from last gene highlighted.</li>
 <li><b>t:</b> Toggle colours (red/green) indicating positive and negative interaction.</li>
 <li><b>l:</b> Toggle plot style between fitness plot and ratio plot.</li>
+<li><b>i:</b> Toggle between log ratio plot styles.</li>
 <li><b>r:</b> Enter zoom mode.  Click on top left and bottom right of area to inspect.</li>
 <li><b>p:</b> Save current plot as vector graphic to QFAVisualisation.ps.  Other filetypes can also be generated - 'n': .png and 'm': .pdf</li>
+<li><b>b:</b> Print experimental metadata report to console window</li>
 <li><b>q:</b> Quit tool and print gene names currently selected to console window.</li>
 </ul>
 </article>
