Updating OSX instructions....
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/qfa@387 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/www/visTool/index.html
+++ b/www/visTool/index.html
@@ -70,7 +70,7 @@ Note that, depending on the version of your operating system, you might be promp
 <ol>
 <li>Download the OSX source code for the package (.tgz file) from <a href="http://r-forge.r-project.org/R/?group_id=880">this</a> page to your hard drive.</li>
 <li>Start the R application on your machine and go Packages & Data -> Package Installer</li>
-<li>Select 'Local Source Package' from list</li>
+<li>Select 'Local Source Package' from list.  <b>Note</b>: you probably want to select the "Install at system-wide level" option here, but you may be prompted for an administrator password.</li>
 <li>Hit the Install button and then navigate to where you've saved the file, press OK to install it</li>
 </ol> 
 
